<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_personal" >
        <EditTextPreference
            android:name="@string/pref_name"
            android:defaultValue="Player 1"
            android:key="editTextName"
            android:summary="@string/pref_name_detalis"
            android:title="@string/pref_name" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_sounds" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="checkboxSounds"
            android:title="@string/pref_sounds_set" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_database" >
        <Preference
            android:key="databaseDelete"
            android:summary="@string/pref_database_delete_details"
            android:title="@string/pref_database_delete" />
    </PreferenceCategory>

</PreferenceScreen>